--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,392 @@
 .jekyll-cache
 .pug-cache
+docs/assets/img/Bree_Rice/08.png
+docs/assets/img/Bree_Rice/09.png
+docs/assets/img/Christi_Payne/00.png
+docs/assets/img/Christi_Payne/01.png
+docs/assets/img/Christi_Payne/02.png
+docs/assets/img/Corinne_Ang/00.png
+docs/assets/img/Corinne_Ang/01.png
+docs/assets/img/Corinne_Ang/02.png
+docs/assets/img/Corinne_Ang/03.png
+docs/assets/img/Corinne_Ang/04.png
+docs/assets/img/Corinne_Ang/05.png
+docs/assets/img/Corinne_Ang/06.png
+docs/assets/img/Corinne_Ang/07.png
+docs/assets/img/Corinne_Ang/08.png
+docs/assets/img/Corinne_Ang/09.png
+docs/assets/img/Cristina_Lopes/00.png
+docs/assets/img/Cristina_Lopes/01.png
+docs/assets/img/Cristina_Lopes/02.png
+docs/assets/img/Cristina_Lopes/03.png
+docs/assets/img/Cristina_Lopes/04.png
+docs/assets/img/Deanna_Laney/00.png
+docs/assets/img/Deanna_Laney/01.png
+docs/assets/img/Deanna_Laney/02.png
+docs/assets/img/Deanna_Laney/03.png
+docs/assets/img/Deanna_Laney/04.png
+docs/assets/img/Deanna_Laney/05.png
+docs/assets/img/Deanna_Laney/06.png
+docs/assets/img/Deanna_Laney/07.png
+docs/assets/img/Deanna_Laney/08.png
+docs/assets/img/Deanna_Laney/09.png
+docs/assets/img/Deanna_Laney/10.png
+docs/assets/img/Ellie_Henderson/00.png
+docs/assets/img/Ellie_Henderson/01.png
+docs/assets/img/Ellie_Henderson/02.png
+docs/assets/img/Ellie_Henderson/03.png
+docs/assets/img/Ellie_Henderson/04.png
+docs/assets/img/Ellie_Henderson/05.png
+docs/assets/img/Ellie_Henderson/06.png
+docs/assets/img/Ellie_Henderson/07.png
+docs/assets/img/Emily_Kurek/00.png
+docs/assets/img/Emily_Kurek/01.png
+docs/assets/img/Emily_Kurek/02.png
+docs/assets/img/Emily_Kurek/03.png
+docs/assets/img/Emily_Kurek/04.png
+docs/assets/img/Emily_Kurek/05.png
+docs/assets/img/Emily_Kurek/06.png
+docs/assets/img/Emily_Kurek/07.png
+docs/assets/img/Erica_Holeman/00.png
+docs/assets/img/Erica_Holeman/01.png
+docs/assets/img/Erica_Holeman/02.png
+docs/assets/img/Erica_Holeman/03.png
+docs/assets/img/Erica_Holeman/04.png
+docs/assets/img/Erica_Holeman/05.png
+docs/assets/img/Erica_Holeman/06.png
+docs/assets/img/Fio_Goncalves/00.png
+docs/assets/img/Fio_Goncalves/01.png
+docs/assets/img/Fio_Goncalves/02.png
+docs/assets/img/Fio_Goncalves/03.png
+docs/assets/img/Fio_Goncalves/04.png
+docs/assets/img/Fio_Goncalves/05.png
+docs/assets/img/Fio_Goncalves/06.png
+docs/assets/img/Fio_Goncalves/07.png
+docs/assets/img/Fio_Goncalves/08.png
+docs/assets/img/Fio_Goncalves/09.png
+docs/assets/img/Ghaya_BinMesmar/00.png
+docs/assets/img/Ghaya_BinMesmar/01.png
+docs/assets/img/Ghaya_BinMesmar/02.png
+docs/assets/img/Ghaya_BinMesmar/03.png
+docs/assets/img/Ghaya_BinMesmar/04.png
+docs/assets/img/Ghaya_BinMesmar/05.png
+docs/assets/img/Ghaya_BinMesmar/06.png
+docs/assets/img/Ghaya_BinMesmar/07.png
+docs/assets/img/Jaamal_Benjamin/00.png
+docs/assets/img/Jaamal_Benjamin/01.png
+docs/assets/img/Jaamal_Benjamin/02.png
+docs/assets/img/Jaamal_Benjamin/03.png
+docs/assets/img/Jaamal_Benjamin/04.png
+docs/assets/img/Jaamal_Benjamin/05.png
+docs/assets/img/Jaamal_Benjamin/06.png
+docs/assets/img/Jaamal_Benjamin/07.png
+docs/assets/img/Jaamal_Benjamin/08.png
+docs/assets/img/Jaamal_Benjamin/09.png
+docs/assets/img/Jamie_Otelsberg/00.png
+docs/assets/img/Jamie_Otelsberg/01.png
+docs/assets/img/Jamie_Otelsberg/02.png
+docs/assets/img/Jamie_Otelsberg/03.png
+docs/assets/img/Jamie_Otelsberg/04.png
+docs/assets/img/Jamie_Otelsberg/05.png
+docs/assets/img/Jamie_Otelsberg/06.png
+docs/assets/img/Jamie_Otelsberg/07.png
+docs/assets/img/Juan_Villanueva/02.jpg
+docs/assets/img/Juan_Villanueva/03.jpg
+docs/assets/img/Juan_Villanueva/04.gif
+docs/assets/img/Karen_Cartas/00.png
+docs/assets/img/Karen_Cartas/01.png
+docs/assets/img/Karen_Cartas/02.png
+docs/assets/img/Karen_Cartas/03.png
+docs/assets/img/Karen_Cartas/04.png
+docs/assets/img/Karen_Cartas/05.png
+docs/assets/img/Karen_Cartas/06.png
+docs/assets/img/Karen_Cartas/07.png
+docs/assets/img/Karen_Cartas/08.png
+docs/assets/img/Karen_Cartas/09.png
+docs/assets/img/Karen_Cartas/10.png
+docs/assets/img/Karla_Pasten/00.png
+docs/assets/img/Karla_Pasten/01.png
+docs/assets/img/Karla_Pasten/02.png
+docs/assets/img/Karla_Pasten/03.png
+docs/assets/img/Karla_Pasten/04.png
+docs/assets/img/Karla_Pasten/05.png
+docs/assets/img/Karla_Pasten/06.png
+docs/assets/img/Karla_Pasten/07.png
+docs/assets/img/Karla_Pasten/08.png
+docs/assets/img/Karla_Pasten/09.png
+docs/assets/img/Karla_Pasten/10.png
+docs/assets/img/Kemie_Guaida/.DS_Store
+docs/assets/img/Kemie_Guaida/00.png
+docs/assets/img/Kemie_Guaida/01.png
+docs/assets/img/Kemie_Guaida/02.png
+docs/assets/img/Kemie_Guaida/03.png
+docs/assets/img/Kemie_Guaida/04.png
+docs/assets/img/Kemie_Guaida/05.png
+docs/assets/img/Kemie_Guaida/06.png
+docs/assets/img/Kemie_Guaida/07.png
+docs/assets/img/Kemie_Guaida/08.png
+docs/assets/img/Kemie_Guaida/09.png
+docs/assets/img/Kemie_Guaida/10.png
+docs/assets/img/Kenta_Yoshioka/00.png
+docs/assets/img/Kenta_Yoshioka/01.png
+docs/assets/img/Kenta_Yoshioka/02.png
+docs/assets/img/Kenta_Yoshioka/03.png
+docs/assets/img/Kenta_Yoshioka/04.png
+docs/assets/img/Kenta_Yoshioka/05.png
+docs/assets/img/Kenta_Yoshioka/06.png
+docs/assets/img/Kenta_Yoshioka/07.png
+docs/assets/img/Kenta_Yoshioka/08.png
+docs/assets/img/Kenta_Yoshioka/09.png
+docs/assets/img/Kirstin_H/00.png
+docs/assets/img/Kirstin_H/01.png
+docs/assets/img/Kirstin_H/02.png
+docs/assets/img/Kirstin_H/03.png
+docs/assets/img/Kirstin_H/04.png
+docs/assets/img/Kirstin_H/05.png
+docs/assets/img/Kirstin_H/06.png
+docs/assets/img/Kirstin_H/07.png
+docs/assets/img/Kirstin_H/08.png
+docs/assets/img/Kirstin_H/09.png
+docs/assets/img/Kirstin_H/10.png
+docs/assets/img/Kym_Rohman/00.png
+docs/assets/img/Kym_Rohman/01.png
+docs/assets/img/Kym_Rohman/02.png
+docs/assets/img/Kym_Rohman/03.png
+docs/assets/img/Kym_Rohman/04.png
+docs/assets/img/Kym_Rohman/05.png
+docs/assets/img/Kym_Rohman/06.png
+docs/assets/img/Leo_Vicenti/00.png
+docs/assets/img/Leo_Vicenti/01.png
+docs/assets/img/Leo_Vicenti/02.png
+docs/assets/img/Leo_Vicenti/03.png
+docs/assets/img/Leo_Vicenti/04.png
+docs/assets/img/Leo_Vicenti/05.png
+docs/assets/img/Leo_Vicenti/06.png
+docs/assets/img/Leo_Vicenti/07.png
+docs/assets/img/Leo_Vicenti/08.png
+docs/assets/img/Leo_Vicenti/09.png
+docs/assets/img/Leslie_Badani/00.png
+docs/assets/img/Leslie_Badani/01.png
+docs/assets/img/Leslie_Badani/02.png
+docs/assets/img/Leslie_Badani/03.png
+docs/assets/img/Leslie_Badani/04.png
+docs/assets/img/Leslie_Badani/05.png
+docs/assets/img/Leslie_Badani/06.png
+docs/assets/img/Leslie_Badani/07.png
+docs/assets/img/Leslie_Badani/08.png
+docs/assets/img/Lexi_Earle/00.png
+docs/assets/img/Lexi_Earle/01.png
+docs/assets/img/Lexi_Earle/02.png
+docs/assets/img/Lexi_Earle/03.png
+docs/assets/img/Lexi_Earle/04.png
+docs/assets/img/Lexi_Earle/05.png
+docs/assets/img/Lexi_Earle/06.png
+docs/assets/img/Lexi_Earle/07.png
+docs/assets/img/Lisa_Chiueh/00.png
+docs/assets/img/Lisa_Chiueh/01.png
+docs/assets/img/Lisa_Chiueh/02.png
+docs/assets/img/Lisa_Chiueh/03.png
+docs/assets/img/Lisa_Chiueh/04.png
+docs/assets/img/Lisa_Chiueh/05.png
+docs/assets/img/Lisa_Chiueh/06.png
+docs/assets/img/Lucy_Chen/00.png
+docs/assets/img/Lucy_Chen/01.png
+docs/assets/img/Lucy_Chen/02.png
+docs/assets/img/Lucy_Chen/03.png
+docs/assets/img/Lucy_Chen/04.png
+docs/assets/img/Lucy_Chen/05.png
+docs/assets/img/Lucy_Chen/06.png
+docs/assets/img/Lucy_Chen/07.png
+docs/assets/img/Lucy_Chen/08.png
+docs/assets/img/Lucy_Chen/09.png
+docs/assets/img/Lucy_Chen/10.png
+docs/assets/img/Lyam_Bewry/00.png
+docs/assets/img/Lyam_Bewry/01.png
+docs/assets/img/Lyam_Bewry/02.png
+docs/assets/img/Lyam_Bewry/03.png
+docs/assets/img/Lyam_Bewry/04.png
+docs/assets/img/Lyam_Bewry/05.png
+docs/assets/img/Lyam_Bewry/06.png
+docs/assets/img/Lyam_Bewry/07.png
+docs/assets/img/Marissa_Balbuena/00.png
+docs/assets/img/Marissa_Balbuena/01.png
+docs/assets/img/Marissa_Balbuena/02.png
+docs/assets/img/Marissa_Balbuena/03.png
+docs/assets/img/Marissa_Balbuena/04.png
+docs/assets/img/Marissa_Balbuena/05.png
+docs/assets/img/Marissa_Balbuena/06.png
+docs/assets/img/Marissa_Balbuena/07.png
+docs/assets/img/Marissa_Balbuena/08.png
+docs/assets/img/Marissa_Balbuena/09.png
+docs/assets/img/Marissa_Balbuena/10.png
+docs/assets/img/Masahiro_Naruse/00.png
+docs/assets/img/Masahiro_Naruse/01.png
+docs/assets/img/Masahiro_Naruse/02.png
+docs/assets/img/Masahiro_Naruse/03.png
+docs/assets/img/Masahiro_Naruse/04.png
+docs/assets/img/Masahiro_Naruse/05.png
+docs/assets/img/Masahiro_Naruse/06.png
+docs/assets/img/Masahiro_Naruse/07.png
+docs/assets/img/Masahiro_Naruse/08.png
+docs/assets/img/Masahiro_Naruse/09.png
+docs/assets/img/Mathew_Prada/00.png
+docs/assets/img/Mathew_Prada/01.png
+docs/assets/img/Mathew_Prada/02.png
+docs/assets/img/Mathew_Prada/03.png
+docs/assets/img/Mathew_Prada/04.png
+docs/assets/img/Mathew_Prada/05.png
+docs/assets/img/Mathew_Prada/06.png
+docs/assets/img/Mathew_Prada/07.png
+docs/assets/img/Miguel_Contreras/00.png
+docs/assets/img/Miguel_Contreras/01.png
+docs/assets/img/Miguel_Contreras/02.png
+docs/assets/img/Miguel_Contreras/03.png
+docs/assets/img/Miguel_Contreras/04.png
+docs/assets/img/Miguel_Contreras/05.png
+docs/assets/img/Miguel_Contreras/06.png
+docs/assets/img/Miguel_Contreras/07.png
+docs/assets/img/Miguel_Contreras/08.png
+docs/assets/img/Miguel_Contreras/09.png
+docs/assets/img/Miguel_Contreras/10.png
+docs/assets/img/Natalia_Salomon/00.png
+docs/assets/img/Natalia_Salomon/01.png
+docs/assets/img/Natalia_Salomon/02.png
+docs/assets/img/Natalia_Salomon/03.png
+docs/assets/img/Natalia_Salomon/04.png
+docs/assets/img/Natalia_Salomon/05.png
+docs/assets/img/Natalia_Salomon/06.png
+docs/assets/img/Oscar_Saylor/00.png
+docs/assets/img/Oscar_Saylor/01.png
+docs/assets/img/Oscar_Saylor/02.png
+docs/assets/img/Oscar_Saylor/03.png
+docs/assets/img/Oscar_Saylor/04.png
+docs/assets/img/Oscar_Saylor/05.png
+docs/assets/img/Oscar_Saylor/06.png
+docs/assets/img/Oscar_Saylor/07.png
+docs/assets/img/Oscar_Saylor/08.png
+docs/assets/img/Oscar_Saylor/09.png
+docs/assets/img/Ravee_Deshpande/00.png
+docs/assets/img/Ravee_Deshpande/01.png
+docs/assets/img/Ravee_Deshpande/02.png
+docs/assets/img/Ravee_Deshpande/03.png
+docs/assets/img/Ravee_Deshpande/04.png
+docs/assets/img/Ravee_Deshpande/05.png
+docs/assets/img/Ravee_Deshpande/06.png
+docs/assets/img/Ravee_Deshpande/07.png
+docs/assets/img/Ravee_Deshpande/08.png
+docs/assets/img/Ravee_Deshpande/09.png
+docs/assets/img/Ravee_Deshpande/10.png
+docs/assets/img/Raven_Mo/00.png
+docs/assets/img/Raven_Mo/01.png
+docs/assets/img/Raven_Mo/02.png
+docs/assets/img/Raven_Mo/03.png
+docs/assets/img/Raven_Mo/04.png
+docs/assets/img/Raven_Mo/05.png
+docs/assets/img/Raven_Mo/06.png
+docs/assets/img/Raven_Mo/07.png
+docs/assets/img/Raven_Mo/08.png
+docs/assets/img/Raven_Mo/09.png
+docs/assets/img/Rosie_Wisniewski/00.png
+docs/assets/img/Rosie_Wisniewski/01.png
+docs/assets/img/Rosie_Wisniewski/02.png
+docs/assets/img/Rosie_Wisniewski/03.png
+docs/assets/img/Rosie_Wisniewski/04.png
+docs/assets/img/Rosie_Wisniewski/05.png
+docs/assets/img/Rosie_Wisniewski/06.png
+docs/assets/img/Rosie_Wisniewski/07.png
+docs/assets/img/Rosie_Wisniewski/08.png
+docs/assets/img/Rosie_Wisniewski/09.png
+docs/assets/img/Shahrzad_Akbari/00.png
+docs/assets/img/Shahrzad_Akbari/01.png
+docs/assets/img/Shahrzad_Akbari/02.png
+docs/assets/img/Shahrzad_Akbari/03.png
+docs/assets/img/Shahrzad_Akbari/04.png
+docs/assets/img/Shahrzad_Akbari/05.png
+docs/assets/img/Shahrzad_Akbari/06.png
+docs/assets/img/Shahrzad_Akbari/07.png
+docs/assets/img/Shahrzad_Akbari/08.png
+docs/assets/img/Shahrzad_Akbari/09.png
+docs/assets/img/Shahrzad_Akbari/10.png
+docs/assets/img/Shaily_Patel/01.png
+docs/assets/img/Shaily_Patel/02.png
+docs/assets/img/Shaily_Patel/03.png
+docs/assets/img/Shaily_Patel/05.png
+docs/assets/img/Shaily_Patel/06.png
+docs/assets/img/Shaily_Patel/07.png
+docs/assets/img/Shaily_Patel/08.png
+docs/assets/img/Shaily_Patel/09.png
+docs/assets/img/Shaily_Patel/10.png
+docs/assets/img/Space_Type/Logo.png
+docs/assets/img/Space_Type/Logo_120.png
+docs/assets/img/Tamara_Segura/00.png
+docs/assets/img/Tamara_Segura/01.png
+docs/assets/img/Tamara_Segura/02.png
+docs/assets/img/Tamara_Segura/03.png
+docs/assets/img/Tamara_Segura/04.png
+docs/assets/img/Tamara_Segura/05.png
+docs/assets/img/Tamara_Segura/06.png
+docs/assets/img/Tamara_Segura/07.png
+docs/assets/img/Tamara_Segura/08.png
+docs/assets/img/Tamara_Segura/09.png
+docs/assets/img/Tamara_Segura/10.png
+docs/assets/img/Thavin_R/01.png
+docs/assets/img/Thavin_R/02.png
+docs/assets/img/Thavin_R/03.png
+docs/assets/img/Thavin_R/04.png
+docs/assets/img/Thavin_R/05.png
+docs/assets/img/Thavin_R/06.png
+docs/assets/img/Thavin_R/07.png
+docs/assets/img/Thavin_R/08.png
+docs/assets/img/Thavin_R/09.png
+docs/assets/img/Tiffany_Lo/00.png
+docs/assets/img/Tiffany_Lo/01.png
+docs/assets/img/Tiffany_Lo/02.png
+docs/assets/img/Tiffany_Lo/03.png
+docs/assets/img/Tiffany_Lo/04.png
+docs/assets/img/Tiffany_Lo/05.png
+docs/assets/img/Tiffany_Lo/06.png
+docs/assets/img/Tomas_Castiglioni/00.png
+docs/assets/img/Tomas_Castiglioni/01.png
+docs/assets/img/Tomas_Castiglioni/02.png
+docs/assets/img/Tomas_Castiglioni/03.png
+docs/assets/img/Tomas_Castiglioni/04.png
+docs/assets/img/Tomas_Castiglioni/05.png
+docs/assets/img/Tomas_Castiglioni/06.png
+docs/assets/img/Tomas_Castiglioni/07.png
+docs/assets/img/Tomas_Castiglioni/08.png
+docs/assets/img/Tomas_Castiglioni/09.png
+docs/assets/img/Tomas_Castiglioni/10.png
+docs/assets/img/Vanna_Vu/00.png
+docs/assets/img/Vanna_Vu/01.png
+docs/assets/img/Vanna_Vu/02.png
+docs/assets/img/Vanna_Vu/03.png
+docs/assets/img/Vanna_Vu/04.png
+docs/assets/img/Vanna_Vu/05.png
+docs/assets/img/Vanna_Vu/07.png
+docs/assets/img/Vini_Vieira/00.png
+docs/assets/img/Vini_Vieira/01.png
+docs/assets/img/Vini_Vieira/02.png
+docs/assets/img/Vini_Vieira/03.png
+docs/assets/img/Vini_Vieira/04.png
+docs/assets/img/Vini_Vieira/05.png
+docs/assets/img/Vini_Vieira/06.png
+docs/assets/img/Vini_Vieira/07.png
+docs/assets/img/Vini_Vieira/08.png
+docs/assets/img/Whitney_Wellmaker/00.png
+docs/assets/img/Whitney_Wellmaker/01.png
+docs/assets/img/Whitney_Wellmaker/02.png
+docs/assets/img/Whitney_Wellmaker/03.png
+docs/assets/img/Whitney_Wellmaker/04.png
+docs/assets/img/Whitney_Wellmaker/05.png
+docs/assets/img/Whitney_Wellmaker/06.png
+docs/assets/img/Whitney_Wellmaker/07.png
+docs/assets/img/Whitney_Wellmaker/08.png
+docs/assets/img/Will_Yang/00.png
+docs/assets/img/Will_Yang/01.png
+docs/assets/img/Will_Yang/02.png
+docs/assets/img/Will_Yang/03.png
+docs/assets/img/Will_Yang/04.png
+docs/assets/img/Will_Yang/05.png
+docs/assets/img/Will_Yang/06.png
+docs/assets/img/Will_Yang/07.png
+docs/assets/img/Will_Yang/08.png
